@@ -1,3 +1,8 @@
+2002-08-22  Jeff Freedman  <jeff@amy.nerble.net>
+
+	* objs/objs.h (public): Added is_pos_invalid().
+	* effects.cc:  Don't delete 'explode' if already off map.
+
 2002-15-12  Aurelien Marchand  <artaxerxes@users.sf.net>
 
 	* audio/Audio.cc: corrected cast error to prevent bus error on Zaurus
